# memory_generator_tsmc12nm

./: .gitignore  .gitmodules  README.md  pyproject.toml
memgen/: __init__.py  cli.py  generate.py  plan.py  uhdl_emit.py  wrapper.py
